# SeqAL

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  mkdocs-deployment.yml
TUTORIAL_10_Performance_Recorder/: index.html
TUTORIAL_11_Multiple_Language_Support/: index.html
TUTORIAL_1_Introduction/: index.html
TUTORIAL_2_Prepare_Corpus/: index.html
TUTORIAL_3_Active_Learner_Setup/: index.html
TUTORIAL_4_Prepare_Data_Pool/: index.html
TUTORIAL_5_Research_and_Annotation_Mode/: index.html
TUTORIAL_6_Query_Setup/: index.html
TUTORIAL_7_Annotated_Data/: index.html
TUTORIAL_8_Stopper/: index.html
TUTORIAL_9_Output_Labeled_Data/: index.html
data/sample_bio/: labeled_data_pool.txt  train_seed.txt  unlabeled_data_pool.txt
data/sample_jp/: dev.txt  labeled_data_pool.txt  test.txt  train_seed.txt  unlabeled_data_pool.txt
docs/: TUTORIAL_10_Performance_Recorder.md  TUTORIAL_11_Multiple_Language_Support.md  TUTORIAL_1_Introduction.md  TUTORIAL_2_Multiple_Language_Support.md  TUTORIAL_2_Prepare_Corpus.md  TUTORIAL_3_Active_Learner_Setup.md  TUTORIAL_3_Training_Parameter.md  TUTORIAL_4_Prepare_Data_Pool.md  TUTORIAL_5_Research_and_Annotation_Mode.md  TUTORIAL_6_Query_Setup.md  TUTORIAL_7_Annotated_Data.md  TUTORIAL_8_Stopper.md  TUTORIAL_9_Ouput_Labeled_Data.md  TUTORIAL_9_Output_Labeled_Data.md  TUTORIAL_X_Multiple_Language_Support.md  index.md  installation.md  performance.md
docs/source/: conf.py  index.md  installation.md  performance.md  usage.md
examples/: TUTORIAL_1_Introduction.md  active_learning_cycle.py  active_learning_cycle_annotation_mode.py  active_learning_cycle_research_mode.py  active_learning_cycle_research_mode_non_spaced_language.py  pool_based_sampling.py  run_al_cycle.py
installation/: index.html
notebooks/: active_learning_cycle_annotation_mode.ipynb  active_learning_cycle_research_mode.ipynb  data_preparation.ipynb
performance/: index.html
search/: search_index.json
seqal/: active_learner.py  aligner.py  base_scorer.py  data.py  datasets.py  performance.py  performance_recorder.py  query_strategies.py  samplers.py  scorers.py  tagger.py  transformer.py  utils.py
seqal/samplers/: __init__.py  base.py  samplers.py
seqal/stoppers/: __init__.py  base.py  stopper.py
tests/: conftest.py  test_active_learner.py  test_aligner.py  test_base_sampler.py  test_base_scorer.py  test_data.py  test_datasets.py  test_main.py  test_performance.py  test_performance_recorder.py  test_query_strategies.py  test_samplers.py  test_scorer.py  test_scorers.py  test_stopper.py  test_tagger.py  test_transformer.py  test_utils.py
tests/fixtures/character_dataset/: en_train_pool.txt  en_train_seed.txt  ja_train_pool.txt  ja_train_seed.txt
tests/fixtures/conll/: eng.testa  eng.testb  eng.train  plain_dataset.txt
tests/fixtures/embeddings/: word_embeddings.txt
