[tool.poetry]
name = "seqal"
version = "0.1.3"
description = "Sequence labeling active learning framework for Python"
authors = ["Xu Liang <liangxu006@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BrambleXu/seqal"
documentation = "https://seqal.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "seqal" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BrambleXu/seqal/issues"
"Changelog" = "https://seqal.readthedocs.io/changelog.html"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dependencies]
python = "^3.8"
flair = "0.8"
torch = "1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pyupgrade = {version = "^2.7.4", python = "^3.6.1"}
tox = "^3.20.1"
ipython = "^7.24.1"
ipykernel = "^5.5.5"
pre-commit = "^2.13.0"
pylint = "^2.8.3"
Sphinx = "3.3.0"
sphinx-rtd-theme = "0.5.0"
myst-parser = "0.14.0"
python-semantic-release = "^7.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "seqal/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=seqal"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
known_first_party = ["seqal", "tests"]
