[tool.poetry]
name = "seqal"
version = "0.2.2"
description = "Sequence labeling active learning framework for Python"
authors = ["Xu Liang <liangxu006@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BrambleXu/seqal"
documentation = "https://seqal.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "seqal" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BrambleXu/seqal/issues"
"Changelog" = "https://seqal.readthedocs.io/changelog.html"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.9.1"
flair = "0.10"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyupgrade = {version = "^2.37.3", python = "^3.6.1"}
tox = "^3.25.1"
ipython = "^8.4.0"
ipykernel = "^6.15.1"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
pandas = "^1.4.3"
seaborn = "^0.11.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=seqal"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
known_first_party = ["seqal", "tests"]
